# SDK-webcam-demo

./: README.md  demo.py  pyproject.toml  requirements.txt
