[tool.poetry]
name = "sdk-webcam-demo"
version = "0.1.0"
description = "How to set up a detector with your webcam"
authors = ["brandon <brandon@groundlight.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
groundlight = "^0.15.1"
framegrab = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
